@@ -128,7 +128,7 @@ namespace OpenBabel
     const char *keywords = pConv->IsOption("k",OBConversion::OUTOPTIONS);
     const char *keywordsEnable = pConv->IsOption("k",OBConversion::GENOPTIONS);
     const char *keywordFile = pConv->IsOption("f",OBConversion::OUTOPTIONS);
-    bool writeUnitCell = pConv->IsOption("u", OBConversion::OUTOPTIONS);
+    bool writeUnitCell = (NULL != pConv->IsOption("u", OBConversion::OUTOPTIONS));
     string defaultKeywords = "#Put Keywords Here, check Charge and Multiplicity.";
 
     if(keywords)
